feat: add get detail product category
